--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uglify-all",
   "version": "0.1.2",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
   "description": "Uglify all html, js and css files in a folder",
   "files": [
